# mempalace-postgres

./: .gitignore  LICENSE  README.md  pyproject.toml
mempalace_postgres/: __init__.py  backend.py
scripts/: bench_embed.py
